--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -58,6 +58,10 @@ section {
     
 }
 
+section p {
+    margin-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -66,15 +70,27 @@ section.normal {
 section.imagem {
     background-color: rgb(77, 76, 76);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.324);    
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
-    background-color: rgba(0, 0, 0, 0.257);
+    background-color: rgba(0, 0, 0, 0.500);
     display: inline-block;
     padding: 5px 10px;
+    text-shadow: 1px 1px 3px black;
 }
 
+section#img01 {
+    background-image: url(imagens/background001.jpg);
 
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+}
 
 
 
