--- a/projetos/Nova pasta/style.css
+++ b/projetos/Nova pasta/style.css
@@ -13,6 +13,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: var(--fonteprincipal);
+    font-size: 0.940rem;
 }
 
 
@@ -77,7 +78,7 @@
     font-weight: 400;
     border: 1px solid var(--cortexto);
     margin: 10px 0px;
-    padding: 5px 10px;
+    padding: 5px 20px;
     border-radius: 10px;
     text-transform: uppercase;
     display: flex;
@@ -91,8 +92,13 @@
     color: #F0F5F5;
     background-color: var(--cortexto);
     box-shadow:  0px 0px 5px var(--cortexto);
+    scale: 1.02;
+    letter-spacing: 3px;
+    font-size: 0.7rem;
+    transition: 0.2s;
 
 }
+
 
 a img {
     width: 16px;       
@@ -106,6 +112,7 @@ a img {
 }
 
 .socials-container a:hover {
-    scale: 1.5;
-    transition: 0.8s;
+    scale: 1.3;
+    transition:  0.8s;
+    rotate: -360deg;
 }
