--- a/projetos/tela-de-cadastro/assets/css/estilo002.css
+++ b/projetos/tela-de-cadastro/assets/css/estilo002.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -37,27 +37,42 @@ div.container {
 
 div.imagem-login {
     width: 50%;
-    background-color: #FAFFB7;
+    background-color: #faffb770;
     display: flex;
     align-items: center;
     justify-content: center;
 
 }
 
-div.imagem-login img {
-    width: 90%;
+div.form-address {
+    width: 50%;
+    background-color: white;
+    display: flex;
+    justify-content: center;    
+    height: 100%;
 }
 
-div.form-header {
-    width: 90%;
+form {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 20px;
+    width: 100%;
+
+}
+
+div.form-address-header {
     display: flex;
     justify-content: space-between;
-    margin:auto;
+    flex-direction: row;
+    width: 100%;    
     
 
 }
 
-div.form-header div.title {
+div.form-address-header div.title {
     border-left: 8px solid var(--bntcolor);
     border-bottom: 6px solid var(--bntcolor);
     padding: 0px 4px;
@@ -65,7 +80,7 @@ div.form-header div.title {
 
 
 /* Botões da pag*/
-div.form-header button, .send-button button {
+div.form-address-header button, .nav-button button, .nav-button input {
     font-size: 1.2em;
     padding: 10px;
     text-transform: uppercase;
@@ -76,11 +91,11 @@ div.form-header button, .send-button button {
     justify-content: center;
 }
 
-div.form-header button:hover, .send-button button:hover {
+div.form-address-header button:hover, .nav-button button:hover, .nav-button input:hover {
     background-color: var(--bnthover);
 }
 
-div.form-header button a, .send-button a {
+div.form-address-header button a, .nav-button a, .nav-button input {
     text-decoration: none;
     color: black;
     font-weight: 600;
@@ -89,59 +104,37 @@ div.form-header button a, .send-button a {
 }
 
 
-div.form {
-    width: 50%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-form {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-}
-
 div.input-group {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 50vh;    
-    width: 90%;
+    flex-wrap: wrap;    
+    
+           
 }
 
-
-div.input-box , .input-radio {
+div.input-box {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 20px 10px 15px 0px ;
     position: relative;
+    width: 43%;
     
 }
 
-div.input-radio {
+div.text-box {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-
+    flex-direction: column;
+    width: 95%;
+    margin: 15px 0px;
 }
 
-div.input-radio input {
+div.text-box textarea {
     outline: none;
 }
 
-div.input-radio p,.input-box label{
+
+label {
     font-weight: bolder;
 }
-
 
 
 .input-user {
@@ -151,6 +144,7 @@ div.input-radio p,.input-box label{
     outline: none;
     letter-spacing: 1px;
     width: 100%;
+    
 }
 
 .label-input{
@@ -167,14 +161,20 @@ div.input-radio p,.input-box label{
     font-size: 0.8em;
 }
 
-.send-button {
-    
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+
+
+.nav-button {
     display: flex;
-    padding-bottom: 30px;
+    justify-content: space-around;
+    width: 100%;
+    padding-bottom: 20px;
+
 }
+
+
+
+
+
 
 @media screen and (min-width: 1300px) {
     div.container {
@@ -187,91 +187,44 @@ div.input-radio p,.input-box label{
         width: 40vw;
     }
 
-    div.form {
+    div.form-address {
         width: 60vw;
     }
 }
 
 @media screen and (max-width: 900px) {
+
     div.container {
+        display: flex;
         flex-direction: column;
         width: 80vw;
-        height: 80vh;
+        height: 100%;
         
+    
         
     }
 
     div.imagem-login {
         width: 100%;
+        height: 80%;
     }
 
     div.imagem-login img {
         width: 50%;
     }
 
-    div.form {
+    div.form-address {
         width: 100%;
+        height: 80%;
     }
+
     
-}
-
-@media screen and (max-width: 550px) {
-    
-    div.input-group {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: column;
-
-    }
-
-    div.input-radio {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        
-    
-    }
-
-    div.form {
-        height: 100vh;
-    }
-
-    form {
-        width: 90%;
-    }
-
-    div.imagem-login img {
-        display: none;
-    }
-
-}
-
-@media screen and (max-width: 410px) {
-    div.form-header {
+div.input-box {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    }
-
-    div.form-header button, .send-button button {
-    font-size: 1em;
-    padding: 6px;
-    }   
-
-    div.form-header .title {
-        margin-bottom: 8px;
-    }
-
-    .send-button {
-        margin-top: 50px;
-    }      
+    flex-direction: column;    
+    position: relative;
+    width: 45%;
     
 }
-
-@media screen and (max-width: 330px) {
-    body {
-        font-size: 0.8em;
-
-    }
+    
 }
