--- a/exercicios/ex026/mq005-menu-hamburguer/style.css
+++ b/exercicios/ex026/mq005-menu-hamburguer/style.css
@@ -1,2 +1,67 @@
 @charset "UTF-8";
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+body, html {
+    background-color: lightgray;
+}
+
+header {
+    background-color: gray;
+}
+
+header>h1 {
+    padding: 10px;
+    text-align: center;
+}
+
+header>menu {
+    display: block;
+}
+
+header>menu>ul {
+    list-style-type: none;
+}
+
+header>menu>ul>li>a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(80, 80, 80);
+    color: white;
+    text-align: center;
+    border-top: 2px solid gray;
+}
+
+header>menu>ul>li>a:hover {
+    transition: 0.3s;
+    background-image: linear-gradient(to right, gray, lightgray);
+    font-weight: bolder;
+    letter-spacing: 1px;
+
+}
+
+body>main {
+    width: 90vw;
+    margin: auto;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+article>h2 {
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+article>p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 30px;
+}
+
