--- a/exercicios/ex026/mq005-menu-hamburguer/style.css
+++ b/exercicios/ex026/mq005-menu-hamburguer/style.css
@@ -19,8 +19,22 @@ header>h1 {
     text-align: center;
 }
 
-header>menu {
+span#burguer{
+    background-color: rgb(41, 41, 41);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: rgb(41, 41, 41);
+}
+
+header>menu {
+    display: none;
 }
 
 header>menu>ul {
