--- a/projetos/site-com-efeito-parallax/style.css
+++ b/projetos/site-com-efeito-parallax/style.css
@@ -15,6 +15,28 @@ body {
 
 }
 
+header nav { 
+    width: calc(100%-30px);
+    margin: 0px 15px;
+    padding: 10px;
+    text-align: center; 
+    background-color: #242424;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+nav a:hover {
+    background-color: rgba(0, 0, 0, 0.778);
+
+
+}
+
 section.parallax1 {
     background-image: url(imagens/casa.jpg);
     background-position: center center;
